# PlantConvert

./: .gitignore  .readthedocs.yaml  HISTORY.rst  Makefile  README.md  README.rst  environment.yml  pyproject.toml  setup.py
.github/workflows/: on-PR.yml
ci/: environment-ci.yml
conda/: environment.yml  meta.yaml
demo/: example_wp.ipynb  examples.ipynb  simple_plant.bgeom  simple_plant.gltf
demo/strawberry/: generate_opf_strawberry.ipynb  generate_opf_strawberry.py
docs/: Makefile  bugs.rst  conf.py  doc.md  environment.yaml  index.rst  installation.rst  license.rst  make.bat  quickstart.rst  readme.rst  requirements.txt
docs/source/references/: index.rst
docs/source/user/: interactive_widgets.rst  quick_start.rst
src/openalea/plantconvert/: __init__.py
tests/: compare.py  const.py  test_plantconvert.py  test_read_gltf.py  test_read_opf.py  test_read_vtk.py  test_write_gltf.py  test_write_mtg.py  test_write_opf.py  test_write_vtk.py
