[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Shenyuan Ma", email = "mashenyuancn@gmail.com"},
  {name = "Christophe Pradal", email = "christophe.pradal@cirad.fr"},
  {name = "Thomas Arsouze", email = "thomas.arsouze@cirad.fr"},
  {name = "Rémi Vézy", email = "remi.vezy@cirad.fr"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy",
  "vtk",
  "pygltflib"
]
description = "Convert a plant to / from a `mtg` format to a wide range of other formats"
dynamic = ["version"]
keywords = ["MTG", "openalea", ".opf", "format", "plantconvert"]
license = {file = "LICENSE"}
name = "openalea.plantconvert"
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Changelog = "https://github.com/openalea/plantconvert/blob/main/HISTORY.rst"
Repository = "https://github.com/openalea/plantconvert"
"Bug Tracker" = "https://github.com/openalea/plantconvert/issues"


[project.optional-dependencies]
test = [
  "pytest",
]
doc = [
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "ipykernel",
  "sphinx-copybutton",
  "ipython_genutils",
  "nbsphinx",
]

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
